--- a/src/Components/news.css
+++ b/src/Components/news.css
@@ -5,16 +5,50 @@
 }
 
 .article {
-  width: 300px;
-  height: 300px;
-  margin: 10px;
+  width: 400px;
+  height: 450px;
+  margin: 50px;
+  position: relative;
+  transition: all .2s;
 }
 
-.article p {
-  font-size: 14px;
+.article:hover {
+  transform: scale(1.05);
+  cursor: pointer;
 }
 
-.article-img {
-  width: 300px;
+.article h4 {
+  padding: 5px;
   height: 150px;
+  margin-top: 40px;
+}
+
+.article h4 > a {
+  color: #000;
+}
+
+.article h4 a:hover {
+  color: #007BFF; 
+}
+
+.article__author {
+  position: absolute;
+  top: 65%;
+  font-size: 14px;
+  color: #fff;
+  background-color: red;
+  padding: 2px 15px;
+  height: 40px;
+}
+
+.article__url {
+  position: absolute;
+  top: 105%;
+  font-size: 12px;
+}
+
+.article__img {
+  width: 400px;
+  height: 300px;
+  border-radius: 5px;
 }
